--- a/blogs-worker/package.json
+++ b/blogs-worker/package.json
@@ -11,6 +11,8 @@
 		"deploy": "npm run build && wrangler deploy"
 	},
 	"dependencies": {
+		"@sentry/cloudflare": "^9.8.0",
+		"@sentry/vite-plugin": "^3.2.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
