--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"deploy": "npm run build && wrangler deploy"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.49.1",
 		"lucide-react": "^0.483.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
