--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	},
 	"dependencies": {
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^7.4.0"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^0.1.14",
