--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 		"deploy": "npm run build && wrangler deploy"
 	},
 	"dependencies": {
+		"@popperjs/core": "^2.11.8",
+		"bootstrap": "^5.3.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-router-dom": "^7.4.0"
+		"react-router-dom": "^7.4.0",
+		"sass": "^1.86.0"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^0.1.14",
