--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"bootstrap": "^5.3.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-markdown": "^10.1.0",
 		"react-router-dom": "^7.4.0",
+		"react-syntax-highlighter": "^15.6.1",
 		"sass": "^1.86.0"
 	},
 	"devDependencies": {
