--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
 		"react-dom": "^18.3.1",
 		"react-markdown": "^10.1.0",
 		"react-router-dom": "^7.4.0",
-		"react-syntax-highlighter": "^15.6.1",
-		"sass": "^1.86.0"
+		"react-syntax-highlighter": "^15.6.1"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^0.1.14",
@@ -31,6 +30,7 @@
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
 		"globals": "^15.14.0",
+		"sass": "1.77.6",
 		"vite": "^6.0.5",
 		"wrangler": "^4.3.0"
 	}
